# MiniTorch

./: .gitignore.txt
src/: CmakeLists.txt  MiniTorch.cpp
src/MiniTorchLib/: CMakeLists.txt  CPUTensorFunctions.cpp  CPUTensorFunctions.h  Tensor.cpp  Tensor.cu  Tensor.h  common.h  cpu_kernels.cpp  cpu_kernels.h  cuda_common.h  cuda_kernels.cu  cuda_kernels.h  cuda_support.cu  cuda_support.h  errors_support.h  helper_functions.h  nn_init.cpp  nn_init.h  rand.h
src/MiniTorchLib_Tests/: CMakeLists.txt  Tensor_Test.cpp
src/PythonWrapper/: CMakeLists.txt  wrappers.cpp
